<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Before_exc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bef_exc"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/doing_exc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doi_exc"
        android:textSize="28sp"
        android:cursorVisible="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/break_exc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bre_exc"
        android:textSize="28sp"
        android:cursorVisible="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_exc"
        android:layout_width="91dp"
        android:layout_height="28dp"
        android:text="@string/end_exc"
        android:textSize="28sp"
        android:cursorVisible="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="233dp"
        android:layout_height="136dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715">

        <TextView
            android:id="@+id/set_num"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num_set"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/num_per_set"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/per_num"
            android:textSize="90sp" />

    </LinearLayout>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sta_btn"
        android:clickable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/stop_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_set_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nex_btn"
        android:cursorVisible="false"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sto_btn"
        android:cursorVisible="false"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <Button
        android:id="@+id/end_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_btn"
        android:cursorVisible="false"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

</androidx.constraintlayout.widget.ConstraintLayout>